--- a/index.html
+++ b/index.html
@@ -128,16 +128,14 @@
     <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.1.1",
-    "react/jsx-runtime": "https://esm.sh/react@19.1.1/jsx-runtime",
-    "react-dom/client": "https://esm.sh/react-dom@19.1.1/client",
+    "react": "https://esm.sh/react@18.3.1",
+    "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
     "react-router-dom": "https://esm.sh/react-router-dom@6.25.1",
     "recharts": "https://esm.sh/recharts@2.12.7",
     "@google/genai": "https://esm.sh/@google/genai@0.14.0",
     "html5-qrcode": "https://esm.sh/html5-qrcode@2.3.8",
-    "qrcode": "https://esm.sh/qrcode@1.5.3",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/"
+    "qrcode": "https://esm.sh/qrcode@1.5.3"
   }
 }
 </script>
